--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-simple-toast": "^1.1.4",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.23.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
